# DigitalNose

./: .gitignore  pyproject.toml  readme.md
src/digital_nose/: __init__.py  app.py  dataset.py  gui.py  model.py  report.py  sensors.py  webapp.py
src/digital_nose/templates/: index.html
tests/: test_model_pipeline.py
